# find-me-GF-cli

./: README.md  pyproject.toml
src/find_me_gf/: __init__.py  __main__.py
src/find_me_gf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
